--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         }
 
         /*应用按钮*/
-		.btn-circle {
-			width: 80px;
-			height: 80px;
+        .btn-circle {
+            width: 80px;
+            height: 80px;
             border-radius: 40px;
             padding: 30px 30px;
             font-size: 20px;
-            opacity:1.0;
-		}
+            opacity: 1.0;
+        }
 
         /*背景图片*/
         body {
@@ -59,12 +59,12 @@
             height: 80px;
         }
 
-		/*版权链接显示样式*/
-		.copyright a {
-			cursor:pointer;
-			text-decoration:none;
-			color: #000000;
-		}
+        /*版权链接显示样式*/
+        .copyright a {
+            cursor: pointer;
+            text-decoration: none;
+            color: #000000;
+        }
     </style>
 </head>
 <body>
@@ -72,33 +72,33 @@
     <!--签名或轮播图-->
     <div class="row">
         <div align="center">
-            <img src="index/img/sjnh.gif"/>
+            <img src="index/img/helloworld.png"/>
         </div>
-        <!--&lt;!&ndash;轮播图&ndash;&gt;-->
+        <!--轮播图-->
         <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">-->
             <!--&lt;!&ndash; 圆点 &ndash;&gt;-->
             <!--<ol class="carousel-indicators">-->
                 <!--<li data-target="#carousel-example-generic" data-slide-to="0"></li>-->
                 <!--<li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>-->
-                <!--&lt;!&ndash;<li data-target="#carousel-example-generic" data-slide-to="2"></li>&ndash;&gt;-->
+                <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
             <!--</ol>-->
             <!--&lt;!&ndash; 图片 &ndash;&gt;-->
             <!--<div class="carousel-inner" role="listbox">-->
                 <!--<div class="item">-->
-                    <!--<img src="img/hanxiaoxing.gif" alt="error" class="img-responsive center-block">-->
+                    <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
                     <!--<div class="carousel-caption">-->
                     <!--</div>-->
                 <!--</div>-->
                 <!--<div class="item active">-->
-                    <!--<img src="img/hyosunghan.gif" alt="error" class="img-responsive center-block">-->
+                    <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
                     <!--<div class="carousel-caption">-->
                     <!--</div>-->
                 <!--</div>-->
-                <!--&lt;!&ndash;<div class="item">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="img/hanxiaoxing.gif" alt="error" class="img-responsive center-block">&ndash;&gt;-->
-                <!--&lt;!&ndash;<div class="carousel-caption">&ndash;&gt;-->
-                <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--<div class="item">-->
+                    <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
+                    <!--<div class="carousel-caption">-->
+                    <!--</div>-->
+                <!--</div>-->
             <!--</div>-->
             <!--&lt;!&ndash; 翻页 &ndash;&gt;-->
             <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
@@ -112,7 +112,7 @@
         <!--</div>-->
     </div>
     <div class="row">
-        <form class="col-lg-8 col-lg-offset-2" role="form" name="bdfm"
+        <form class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2" role="form" name="bdfm"
               method="get" action="http://www.baidu.com/s?word">
             <div class="input-group">
                 <div class="input-group-btn">
@@ -157,44 +157,44 @@
         </form>
     </div>
     <br>
-	<br>
-	<div class="row">
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group col-lg-offset-2">
+    <br>
+    <div class="row">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group col-lg-offset-2 col-md-offset-2">
             <a href="http://wx.qq.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/weixin.jpg');background-size: cover">
             </a>
         </div>
-		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.alipay.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/zhifubao.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://pan.baidu.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/baiduyun.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://music.163.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/wangyiyun.jpg');background-size: cover">
             </a>
         </div>
-		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.jd.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/jingdong.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.taobao.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/taobao.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.youku.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/youku.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="https://v.qq.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/tengxunshipin.jpg');background-size: cover">
             </a>
@@ -202,42 +202,42 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group  col-lg-offset-2">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group  col-lg-offset-2 col-md-offset-2">
             <a href="http://www.douyu.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/douyu.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.zhaikexueyuan.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/zhaikexueyuan.jpg');background-size: cover">
             </a>
         </div>
-		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://weibo.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/weibo.jpg');background-size: cover">
             </a>
         </div>
-		<div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="https://mail.qq.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/qqyouxiang.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.csdn.net/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/csdn.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://www.w3cschool.cn" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/w3cschool.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="https://github.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/github.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-3 col-sm-3 col-xs-6 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
             <a href="http://news.ifeng.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
             </a>
@@ -264,7 +264,7 @@
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
                             <img src="index/img/head.png" alt="error" class="img-circle">
                         </div>
-                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-9">
+                        <div class="col-lg-10 col-md-10 col-sm-30 col-xs-9">
                             <strong>Name:</strong> HyosungHan<br>
                             <strong>Region:</strong> Shaanxi,Xi'an<br>
                             <strong>E-Mail:</strong> ihyosung@foxmail.com<br>
