--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <div class="row">
         <form class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2" role="form" name="bdfm"
-              method="get" action="http://www.baidu.com/s?word">
+              method="get" action="http://www.baidu.com/s?word"><!--https://www.google.com.hk/search?q-->
             <div class="input-group">
                 <div class="input-group-btn">
                     <button class="btn btn-lg btn-circle-head btn-info" type="reset">
@@ -238,12 +238,55 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
-            <a href="http://news.ifeng.com/" class="btn btn-primary btn-circle"
+            <a href="http://www.ifeng.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
             </a>
         </div>
     </div>
-    <br> <br> <br> <br>
+    <br>
+    <div class="row">
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group  col-lg-offset-2 col-md-offset-2">
+            <a href="http://xa.58.com/" class="btn btn-warning btn-circle"
+               style="background-image: url('index/img/58.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="http://www.zhipin.com/" class="btn btn-warning btn-circle"
+               style="background-image: url('index/img/bosszhipin.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="http://www.dianping.com/" class="btn btn-warning btn-circle"
+               style="background-image: url('index/img/dazhongdianping.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="https://www.huaweicloud.com/" class="btn btn-primary btn-circle"
+               style="background-image: url('index/img/huaweiyun.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="http://www.linkedin.com/" class="btn btn-danger btn-circle"
+               style="background-image: url('index/img/lingying.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="http://www.ctrip.com" class="btn btn-danger btn-circle"
+               style="background-image: url('index/img/xiecheng.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="https://www.cmbchina.com/" class="btn btn-success btn-circle"
+               style="background-image: url('index/img/zhaoshangyinhang.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+            <a href="http://www.zhihu.com/" class="btn btn-primary btn-circle"
+               style="background-image: url('index/img/zhihu.jpg');background-size: cover">
+            </a>
+        </div>
+    </div>
+    <br> <br>
     <div class="row">
         <div align="center" class="copyright">
             Copyright &copy;
