--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-size: 20px;
         }
 
-        /*应用按钮*/
+        /*应用*/
         .btn-circle {
             width: 80px;
             height: 80px;
@@ -28,6 +28,10 @@
             padding: 30px 30px;
             font-size: 20px;
             opacity: 1.0;
+            margin-bottom: 15px;
+            margin-top: 15px;
+            margin-left: 15px;
+            margin-right: 15px;
         }
 
         /*背景图片*/
@@ -112,7 +116,7 @@
         <!--</div>-->
     </div>
     <div class="row">
-        <form class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2" role="form" name="bdfm"
+        <form class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-lg-offset-2" role="form" name="bdfm"
               method="get" action="http://www.baidu.com/s?word"><!--https://www.google.com.hk/search?q-->
             <div class="input-group">
                 <div class="input-group-btn">
@@ -156,131 +160,123 @@
             </div>
         </form>
     </div>
-    <br>
-    <br>
     <div class="row">
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group col-lg-offset-2 col-md-offset-2">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group col-lg-offset-2">
             <a href="http://wx.qq.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/weixin.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.alipay.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/zhifubao.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://pan.baidu.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/baiduyun.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://music.163.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/wangyiyun.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.jd.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/jingdong.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.taobao.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/taobao.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.youku.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/youku.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="https://v.qq.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/tengxunshipin.jpg');background-size: cover">
             </a>
         </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group  col-lg-offset-2 col-md-offset-2">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group  col-lg-offset-2">
             <a href="http://www.douyu.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/douyu.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.zhaikexueyuan.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/zhaikexueyuan.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://weibo.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/weibo.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="https://mail.qq.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/qqyouxiang.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.csdn.net/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/csdn.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.w3cschool.cn" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/w3cschool.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="https://github.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/github.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.ifeng.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
             </a>
         </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group  col-lg-offset-2 col-md-offset-2">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group  col-lg-offset-2">
             <a href="http://xa.58.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/58.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.zhipin.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/bosszhipin.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.dianping.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/dazhongdianping.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="https://www.huaweicloud.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/huaweiyun.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.linkedin.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/lingying.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.ctrip.com" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/xiecheng.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="https://www.cmbchina.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/zhaoshangyinhang.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-3 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.zhihu.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/zhihu.jpg');background-size: cover">
             </a>
@@ -307,7 +303,7 @@
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
                             <img src="index/img/head.png" alt="error" class="img-circle">
                         </div>
-                        <div class="col-lg-10 col-md-10 col-sm-30 col-xs-9">
+                        <div class="col-lg-10 col-md-10 col-sm-20 col-xs-9">
                             <strong>Name:</strong> HyosungHan<br>
                             <strong>Region:</strong> Shaanxi,Xi'an<br>
                             <strong>E-Mail:</strong> ihyosung@foxmail.com<br>
