--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://pan.baidu.com/" class="btn btn-primary btn-circle"
+            <a href="http://pan.baidu.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/baiduyun.jpg');background-size: cover">
             </a>
         </div>
@@ -182,7 +182,7 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.jd.com/" class="btn btn-danger btn-circle"
+            <a href="http://www.jd.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/jingdong.jpg');background-size: cover">
             </a>
         </div>
@@ -192,12 +192,12 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.youku.com/" class="btn btn-success btn-circle"
+            <a href="http://www.youku.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/youku.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://v.qq.com/" class="btn btn-success btn-circle"
+            <a href="https://v.qq.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/tengxunshipin.jpg');background-size: cover">
             </a>
         </div>
@@ -207,17 +207,17 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.zhaikexueyuan.com/" class="btn btn-warning btn-circle"
+            <a href="http://www.zhaikexueyuan.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/zhaikexueyuan.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://weibo.com/" class="btn btn-warning btn-circle"
+            <a href="http://weibo.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/weibo.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://mail.qq.com/" class="btn btn-primary btn-circle"
+            <a href="https://mail.qq.com/" class="btn btn-warning btn-circle"
                style="background-image: url('index/img/qqyouxiang.jpg');background-size: cover">
             </a>
         </div>
@@ -227,27 +227,27 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.w3cschool.cn" class="btn btn-danger btn-circle"
+            <a href="http://www.w3cschool.cn" class="btn btn-default btn-circle"
                style="background-image: url('index/img/w3cschool.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://github.com/" class="btn btn-success btn-circle"
+            <a href="https://github.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/github.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.ifeng.com/" class="btn btn-primary btn-circle"
+            <a href="http://www.ifeng.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group  col-lg-offset-2">
-            <a href="http://xa.58.com/" class="btn btn-warning btn-circle"
+            <a href="http://xa.58.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/58.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.zhipin.com/" class="btn btn-warning btn-circle"
+            <a href="http://www.zhipin.com/" class="btn btn-success btn-circle"
                style="background-image: url('index/img/bosszhipin.jpg');background-size: cover">
             </a>
         </div>
@@ -257,22 +257,22 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://www.huaweicloud.com/" class="btn btn-primary btn-circle"
+            <a href="https://www.huaweicloud.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/huaweiyun.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.linkedin.com/" class="btn btn-danger btn-circle"
+            <a href="http://www.linkedin.com/" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/lingying.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.ctrip.com" class="btn btn-danger btn-circle"
+            <a href="http://www.ctrip.com" class="btn btn-primary btn-circle"
                style="background-image: url('index/img/xiecheng.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://www.cmbchina.com/" class="btn btn-success btn-circle"
+            <a href="https://www.cmbchina.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/zhaoshangyinhang.jpg');background-size: cover">
             </a>
         </div>
