--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.jd.com/" class="btn btn-warning btn-circle"
+            <a href="http://www.jd.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/jingdong.jpg');background-size: cover">
             </a>
         </div>
