--- a/index.html
+++ b/index.html
@@ -120,20 +120,9 @@
               method="get" action="http://www.baidu.com/s?word"><!--https://www.google.com.hk/search?q-->
             <div class="input-group">
                 <div class="input-group-btn">
-                    <button class="btn btn-lg btn-circle-head btn-info" type="reset">
-                        <span class="glyphicon glyphicon-repeat"></span>
-                    </button>
-                </div>
-                <input type="text" class="form-control input-lg btn-circle-head" id="focusedInput"
-                       name="word" autofocus="autofocus"
-                       placeholder="The value of life, not with time, but with the depth to be measured.">
-                <div class="input-group-btn">
-                    <button type="submit" class="btn btn-info btn-circle-head btn-lg">
-                        <span class="glyphicon glyphicon-search"></span>
-                    </button>
-                    <button type="submit" class="btn btn-info btn-circle-head btn-lg dropdown-toggle"
+                    <button type="submit" class="btn btn-default btn-circle-head btn-lg dropdown-toggle"
                             data-toggle="dropdown">
-                        <span class="caret"></span> <span class="sr-only"></span>
+                        <span class="glyphicon glyphicon-triangle-bottom"></span> <span class="sr-only"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="http://news.baidu.com/" class="btn btn-lg"><span
@@ -156,6 +145,14 @@
                         <li><a href="http://www.baidu.com/more/" class="btn btn-lg"><span
                                 class="glyphicon glyphicon-th"></span>MORE>></a></li>
                     </ul>
+                </div>
+                <input type="text" class="form-control input-lg btn-circle-head" id="focusedInput"
+                       name="word" autofocus="autofocus"
+                       placeholder="The value of life, not with time, but with the depth to be measured.">
+                <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default btn-circle-head btn-lg">
+                        <span class="glyphicon glyphicon-triangle-right"></span>
+                    </button>
                 </div>
             </div>
         </form>
