--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
               method="get" action="http://www.baidu.com/s?word"><!--https://www.google.com.hk/search?q-->
             <div class="input-group">
                 <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default btn-circle-head btn-lg dropdown-toggle"
+                    <button type="button" class="btn btn-default btn-circle-head btn-lg dropdown-toggle"
                             data-toggle="dropdown">
-                        <span class="glyphicon glyphicon-triangle-bottom"></span> <span class="sr-only"></span>
+                        <!--<span class="caret"></span> <span class="sr-only"></span>-->
+                        <span class="glyphicon glyphicon-triangle-bottom"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="http://news.baidu.com/" class="btn btn-lg"><span
@@ -151,7 +152,7 @@
                        placeholder="The value of life, not with time, but with the depth to be measured.">
                 <div class="input-group-btn">
                     <button type="submit" class="btn btn-default btn-circle-head btn-lg">
-                        <span class="glyphicon glyphicon-triangle-right"></span>
+                        <span class="glyphicon glyphicon-globe"></span>
                     </button>
                 </div>
             </div>
