--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                        placeholder="The value of life, not with time, but with the depth to be measured.">
                 <div class="input-group-btn">
                     <button type="submit" class="btn btn-default btn-circle-head btn-lg">
-                        <span class="glyphicon glyphicon-globe"></span>
+                        <span class="glyphicon glyphicon-search"></span>
                     </button>
                 </div>
             </div>
