--- a/index.html
+++ b/index.html
@@ -75,30 +75,30 @@
 <div class="container-fluid">
     <!--签名或轮播图-->
     <div class="row">
-        <div align="center">
-            <img src="index/img/helloworld.png"/>
+        <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-lg-offset-2">
+            <img src="index/img/helloworld.png" width="100%" height="200"/>
         </div>
         <!--轮播图-->
         <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">-->
             <!--&lt;!&ndash; 圆点 &ndash;&gt;-->
             <!--<ol class="carousel-indicators">-->
                 <!--<li data-target="#carousel-example-generic" data-slide-to="0"></li>-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+                <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+                <!--<li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>-->
             <!--</ol>-->
             <!--&lt;!&ndash; 图片 &ndash;&gt;-->
             <!--<div class="carousel-inner" role="listbox">-->
                 <!--<div class="item">-->
-                    <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
-                    <!--<div class="carousel-caption">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item active">-->
-                    <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
+                    <!--<img src="index/img/hello1.png" alt="error" class="img-responsive center-block">-->
                     <!--<div class="carousel-caption">-->
                     <!--</div>-->
                 <!--</div>-->
                 <!--<div class="item">-->
+                    <!--<img src="index/img/hello2.png" alt="error" class="img-responsive center-block">-->
+                    <!--<div class="carousel-caption">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="item active">-->
                     <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
                     <!--<div class="carousel-caption">-->
                     <!--</div>-->
