--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base target="_blank">
     <title>HomePage</title>
+    <link rel="icon" href="index/img/title.jpg" type="image/x-icon"/>
     <link href="index/css/bootstrap.min.css" rel="stylesheet">
     <script src="index/js/jquery.min.js"></script>
     <script src="index/js/bootstrap.min.js"></script>
