--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
     <script src="index/js/bootstrap.min.js"></script>
     <style type="text/css">
 
-        /*搜索框*/
+        /*搜索框及前后按钮*/
         .btn-circle-head {
             width: 60px;
             height: 60px;
             border-radius: 30px;
             padding: 20px 20px;
             font-size: 20px;
+            border-color:#fff;
+            webkit-box-shadow:none;
+            box-shadow:none;
+        }
+        .btn-circle-head:link,.btn-circle-head:visited,.btn-circle-head:focus,.btn-circle-head:hover,.btn-circle-head:active {
+            border-color:#fff;
+            webkit-box-shadow:none;
+            box-shadow:none;
         }
 
-        /*应用*/
+        /*应用按钮*/
         .btn-circle {
             width: 80px;
             height: 80px;
@@ -74,7 +82,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <!--签名或轮播图-->
+    <!--logo或轮播图-->
     <div class="row">
         <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-lg-offset-2">
             <img src="index/img/helloworld.png" width="100%" height="200"/>
@@ -122,7 +130,7 @@
             <div class="input-group">
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default btn-circle-head btn-lg dropdown-toggle"
-                            data-toggle="dropdown">
+                            data-toggle="dropdown" style="outline: none">
                         <!--<span class="caret"></span> <span class="sr-only"></span>-->
                         <span class="glyphicon glyphicon-triangle-bottom"></span>
                     </button>
@@ -152,7 +160,7 @@
                        name="word" autofocus="autofocus"
                        placeholder="The value of life, not with time, but with the depth to be measured.">
                 <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default btn-circle-head btn-lg">
+                    <button type="submit" class="btn btn-default btn-circle-head btn-lg" style="outline: none">
                         <span class="glyphicon glyphicon-search"></span>
                     </button>
                 </div>
