--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
             border-radius: 30px;
             padding: 20px 20px;
             font-size: 20px;
-            border-color:#fff;
-            webkit-box-shadow:none;
-            box-shadow:none;
+            border-color: #fff;
+            webkit-box-shadow: none;
+            box-shadow: none;
         }
-        .btn-circle-head:link,.btn-circle-head:visited,.btn-circle-head:focus,.btn-circle-head:hover,.btn-circle-head:active {
-            border-color:#fff;
-            webkit-box-shadow:none;
-            box-shadow:none;
+
+        .btn-circle-head:link, .btn-circle-head:visited, .btn-circle-head:focus, .btn-circle-head:hover, .btn-circle-head:active {
+            border-color: #fff;
+            webkit-box-shadow: none;
+            box-shadow: none;
         }
 
         /*应用按钮*/
@@ -82,38 +83,38 @@
 </head>
 <body>
 <div class="container-fluid">
-    <!--logo或轮播图-->
     <div class="row">
-        <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-lg-offset-2">
-            <img src="index/img/helloworld.png" width="100%" height="200"/>
-        </div>
-        <!--轮播图-->
-        <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">-->
-            <!--&lt;!&ndash; 圆点 &ndash;&gt;-->
+        <!-- 轮播图 -->
+        <div id="carousel-example-generic" class="carousel slide col-lg-8 col-md-12 col-sm-12 col-xs-12 col-lg-offset-2"
+             data-ride="carousel" data-interval="3000">
+            <!-- 图片 -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item">
+                    <img src="index/img/hello1.png" alt="error" class="img-responsive center-block"
+                         style="width: 100%;height: 200px;">
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="index/img/hello2.png" alt="error" class="img-responsive center-block"
+                         style="width: 100%;height: 200px;">
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+                <div class="item active">
+                    <img src="index/img/helloworld.png" alt="error" class="img-responsive center-block"
+                         style="width: 100%;height: 200px;">
+                    <div class="carousel-caption">
+                    </div>
+                </div>
+            </div>
+            <!-- 圆点 -->
             <!--<ol class="carousel-indicators">-->
                 <!--<li data-target="#carousel-example-generic" data-slide-to="0"></li>-->
                 <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
                 <!--<li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>-->
             <!--</ol>-->
-            <!--&lt;!&ndash; 图片 &ndash;&gt;-->
-            <!--<div class="carousel-inner" role="listbox">-->
-                <!--<div class="item">-->
-                    <!--<img src="index/img/hello1.png" alt="error" class="img-responsive center-block">-->
-                    <!--<div class="carousel-caption">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item">-->
-                    <!--<img src="index/img/hello2.png" alt="error" class="img-responsive center-block">-->
-                    <!--<div class="carousel-caption">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="item active">-->
-                    <!--<img src="index/img/helloworld.png" alt="error" class="img-responsive center-block">-->
-                    <!--<div class="carousel-caption">-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; 翻页 &ndash;&gt;-->
+            <!-- 翻页 -->
             <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
                 <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
                 <!--<span class="sr-only">Previous</span>-->
@@ -122,12 +123,14 @@
                 <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
                 <!--<span class="sr-only">Next</span>-->
             <!--</a>-->
-        <!--</div>-->
+        </div>
     </div>
     <div class="row">
+        <!-- 搜索框 -->
         <form class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-lg-offset-2" role="form" name="bdfm"
               method="get" action="http://www.baidu.com/s?word"><!--https://www.google.com.hk/search?q-->
             <div class="input-group">
+                <!-- 下拉菜单 -->
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default btn-circle-head btn-lg dropdown-toggle"
                             data-toggle="dropdown" style="outline: none">
@@ -156,9 +159,11 @@
                                 class="glyphicon glyphicon-th"></span>MORE>></a></li>
                     </ul>
                 </div>
+                <!-- 输入框 -->
                 <input type="text" class="form-control input-lg btn-circle-head" id="focusedInput"
                        name="word" autofocus="autofocus"
                        placeholder="The value of life, not with time, but with the depth to be measured.">
+                <!-- 搜索按钮 -->
                 <div class="input-group-btn">
                     <button type="submit" class="btn btn-default btn-circle-head btn-lg" style="outline: none">
                         <span class="glyphicon glyphicon-search"></span>
@@ -291,6 +296,7 @@
     </div>
     <br> <br>
     <div class="row">
+        <!-- 版权声明 -->
         <div align="center" class="copyright">
             Copyright &copy;
             <a data-toggle="modal" data-target="#myModal"><em>HyosungHan</em></a>,
@@ -323,7 +329,6 @@
                 </div>
             </div>
         </div>
-        <!-- 个人信息模态窗口 -->
     </div>
 </div>
 </body>
