--- a/index.html
+++ b/index.html
@@ -90,12 +90,6 @@
             <!-- 图片 -->
             <div class="carousel-inner" role="listbox">
                 <div class="item">
-                    <img src="index/img/hello1.png" alt="error" class="img-responsive center-block"
-                         style="width: 100%;height: 200px;">
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-                <div class="item">
                     <img src="index/img/hello2.png" alt="error" class="img-responsive center-block"
                          style="width: 100%;height: 200px;">
                     <div class="carousel-caption">
@@ -107,13 +101,19 @@
                     <div class="carousel-caption">
                     </div>
                 </div>
+                <div class="item">
+                    <img src="index/img/hello1.png" alt="error" class="img-responsive center-block"
+                         style="width: 100%;height: 200px;">
+                    <div class="carousel-caption">
+                    </div>
+                </div>
             </div>
             <!-- 圆点 -->
-            <!--<ol class="carousel-indicators">-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="0"></li>-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
-                <!--<li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>-->
-            <!--</ol>-->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
             <!-- 翻页 -->
             <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
                 <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
