--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
                 <!-- 输入框 -->
                 <input type="text" class="form-control input-lg btn-circle-head" id="focusedInput"
-                       name="word" autofocus="autofocus"
+                       name="word" autofocus="autofocus" autocomplete="off"
                        placeholder="The value of life, not with time, but with the depth to be measured.">
                 <!-- 搜索按钮 -->
                 <div class="input-group-btn">
